added grpc logging
